Fix duplicate sentence in German lang string

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -541,7 +541,7 @@
   },
   "homePage__soundDoctrineText": {
     "comment": "home page sound doctrine text",
-    "string": "AudioVerse ist eine Plattform, die die besten adventistischen Audioinhalte kuratiert. AudioVerse ist eine Plattform, die die besten adventistischen Audioinhalte kuratiert. Lass dich durch Lieder, Predigten, Hörbücher und Bibellesungen herausfordern und inspirieren, in deiner Beziehung mit Jesus zu wachsen."
+    "string": "AudioVerse ist eine Plattform, die die besten adventistischen Audioinhalte kuratiert. Lass dich durch Lieder, Predigten, Hörbücher und Bibellesungen herausfordern und inspirieren, in deiner Beziehung mit Jesus zu wachsen."
   },
   "homePage__soundDoctrineTitle": {
     "comment": "home: Sound Doctrine section title",
