--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -143,10 +143,10 @@
     "string": "Digital Marketing Coordinator"
   },
   "about__teamAlistairBio": {
-    "string": "Something about background and qualifications, Alistair leads the strategy at AudioVerse, talking with users and donors to inform the future of the ministry. He also speaks about topics and topics."
+    "string": "From his stand-up desk, Alistair oversees the strategy and day-to-day management by ensuring that we are doing the right things and that we are doing things right."
   },
   "about__teamAnnetteBio": {
-    "string": "Something about background and qualifications, Annette works on the structure as well as the interface for the AudioVerse platform. She enjoys enjoying things and hobbies and such."
+    "string": "All the media on AudioVerse has Annette’s fingerprints on it. She works with partners, obtains content, edits them, and publishes them on AudioVerse."
   },
   "about__teamAssistantOperationsCoordinator": {
     "string": "Assistant Operations Coordinator"
@@ -185,7 +185,7 @@
     "string": "Business Manager"
   },
   "about__teamDebbyBio": {
-    "string": "Something about background and qualifications, Debby runs the day to day operations at AudioVerse, working with presenters and ministries to get their content uploaded."
+    "string": "With her background as a CPA, wife, and mother, Debby capably manages the finances, HR, and correspondence for the ministry."
   },
   "about__teamExecutive": {
     "string": "Executive Team"
@@ -197,13 +197,13 @@
     "string": "The AudioVerse Executive Team are responsible for the day-to-day operations of the ministry.&nbsp; This group of dedicated individuals with their their common passion for the proclamation of the three angels' messages is what keeps this ministry running."
   },
   "about__teamLizBio": {
-    "string": "Something about background and qualifications, Liz works on the structure as well as the interface for the AudioVerse platform. She enjoys enjoying things and hobbies and such."
+    "string": "A social media dynamo, e-commerce go-getter, and energetic marketer, Liz helps grow our social media audience and oversees our digital marketing efforts."
   },
   "about__teamMatthewBio": {
-    "string": "Something about background and qualifications, Matthew works on the structure as well as the interface for the AudioVerse platform. He enjoys enjoying things and hobbies and such."
+    "string": "Frontend, backend, full-stack and more. Matthew churns out code and builds beautiful things all while walking on a treadmill."
   },
   "about__teamNathanBio": {
-    "string": "Something about background and qualifications, Nathan is responsible for setting up the structure behind the AudioVerse platform. He enjoys enjoying things and hobbies and such."
+    "string": "Nathan contributes to the ministry by solving big problems, managing development projects, and keeping the ministry’s technology humming."
   },
   "about__teamSoftwareEngineer": {
     "string": "Software Engineer"
