More textual adjustments

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -155,10 +155,10 @@
     "string": "Board of Directors"
   },
   "about__teamBoardArakawaTitle": {
-    "string": "Chairman (Co-founder) | Physician, Guam"
+    "string": "Chairman (Co-founder) | Physician, Albany, Oregon"
   },
   "about__teamBoardClarkTitle": {
-    "string": "Pastor, Dalton SDA Church"
+    "string": "Vice President for Administration, Georgia-Cumberland Conference"
   },
   "about__teamBoardHuongTitle": {
     "string": "Secretary | Executive Director, AudioVerse"
@@ -194,7 +194,7 @@
     "string": "Executive Director"
   },
   "about__teamIntro": {
-    "string": "The AudioVerse Executive Team are responsible for the day-to-day operations of the ministry.&nbsp; This group of dedicated individuals with their their common passion for the proclamation of the three angels' messages is what keeps this ministry running."
+    "string": "The AudioVerse Executive Team are responsible for the day-to-day operations of the ministry. This group of dedicated individuals with their their common passion for the proclamation of the three angels' messages is what keeps this ministry running."
   },
   "about__teamLizBio": {
     "string": "A social media dynamo, e-commerce go-getter, and energetic marketer, Liz helps grow our social media audience and oversees our digital marketing efforts."
